--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,12 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+  <style>
+    #map {
+      display: block;
+      height: 180px;
+    }
+  </style>
   <title>MedDonor</title>
 </head>
 
